Add Benefits End Date to match query response, query results table, and api docs
